--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <title>Header and Footer Example</title>
+<html lang="en">
+  <head>
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
-</head>
+    <title>AirBnB_Clone</title>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <img src="images/icon.png" alt="icon">
-        </div>
     </header>
-
-
-
     <footer>
-        <p>Best School</p>
+      <p>Best School</p>
     </footer>
-</body>
+  </body>
 
 </html>
